--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Blogs#new</h1>
-<p>Find me in app/views/blogs/new.html.erb</p>
+<!-- 投稿ページ -->
+<h1>新規投稿</h1>
+<%= form_for(@blog) do |f| %>
+  <h4>1タイトル</h4>
+  <%= f.text_field :title %>
+  <h4>カテゴリー</h4>
+  <%= f.text_field :category %>
+  <h4>本文</h4>
+  <%= f.text_area :body %>
+
+  <!-- 投稿ボタン -->
+  <%= f.submit '投稿' %>
+  <!--  -->
+
+<% end %>
+
