--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,7 +1,7 @@
 <!-- 投稿ページ -->
 <h1>新規投稿</h1>
 <%= form_for(@blog) do |f| %>
-  <h4>1タイトル</h4>
+  <h4>タイトル</h4>
   <%= f.text_field :title %>
   <h4>カテゴリー</h4>
   <%= f.text_field :category %>
