--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -36,6 +36,7 @@
     <section class="blog">
       <h2 class="blog-headline">Recent Blogs</h2>
       <div class="blog-box">
+      	<!-- 繰り返し処理 -->
         <% @blogs.each do |blog| %>
             <div class="blog-item clearfix">
                 <div class="blog-image"><%= image_tag('img/desert.jpg', class: 'blog-image') %></div>
