--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Blogs#edit</h1>
-<p>Find me in app/views/blogs/edit.html.erb</p>
+<h1>投稿ページ</h1>
+
+<%= form_for(blog.id) %>
+  <h3>タイトル</h3>
+  <h3>カテゴリー</h3>
+  <h3>本文</h3>
+  <h3>画像</h3>
+<end>
